--- a/casual20221126.md
+++ b/casual20221126.md
@@ -12,4 +12,7 @@ reward is prediction function from history data
 **********************************************
 casual representation sharing
 GIN可以解一切问题
-因果学习，因果推断
+因果学习，因果推断,plolicy learning design,a\b testing
+中台团队
+uplift？
+learn protential learning
