qwen and self discovery agent

--- a/langchain_exp/Simple_ReAct_Agent.ipynb
+++ b/langchain_exp/Simple_ReAct_Agent.ipynb
@@ -19,8 +19,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from qwen import QOWCaller\n",
-    "client = QOWCaller()"
+    "# from qwen import QOWCaller\n",
+    "# client = QOWCaller()\n"
    ]
   },
   {
@@ -406,21 +406,22 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from tavily import TavilyClient"
+    "from tavily import TavilyClient\n",
+    "client = TavilyClient(api_key=os.environ.get(\"TRAVILY_API_KEY\"))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'The current weather in Dalian, Liaoning, China is sunny with a temperature of 32.2°C (90.0°F). The wind speed is 34.9 kph coming from the west, and the humidity is at 43%. The weather feels like 36.1°C (96.9°F).'"
+       "'The current weather in Dalian, China is sunny with a temperature of 25.7°C (78.3°F). The humidity is at 55%, and there is no precipitation expected. Wind speed is at 24.8 kph coming from WSW direction.'"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 67,
      "metadata": {},
      "output_type": "execute_result"
     }
